YashasviDuniya/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: yashasvi-duniya
  labels:
    app.kubernetes.io/name: yashasvi-duniya
    app.kubernetes.io/managed-by: argocd
